--- a/styles.html
+++ b/styles.html
@@ -1,6 +1,4 @@
-<dom-module id="styles">
-<template>
-<style>
+<style is="custom-style">
   /*Color variables*/
   :root {
     --polytipe-bg-color: #303030;
@@ -483,5 +481,3 @@
   }
 
 </style>
-</template>
-</dom-module>
