Fix multiple projects problem / Empty states
Visual changes

--- a/elements.html
+++ b/elements.html
@@ -8,7 +8,10 @@
 <link rel="import" href="bower_components/iron-icons/hardware-icons.html">
 <link rel="import" href="bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="bower_components/iron-image/iron-image.html">
+<link rel="import" href="bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
 
 <!-- paper-elements -->
 <link rel="import" href="bower_components/paper-drawer-panel/paper-drawer-panel.html">
