--- a/index.html
+++ b/index.html
@@ -43,9 +43,24 @@
   <template id="app" is="dom-bind">
     <paper-drawer-panel disable-swipe force-narrow drawer-width="290px" drawer-toggle-attribute="paper-drawer-left">
       <paper-header-panel drawer mode="seamed">
-        <paper-toolbar class="sidebar_polytipe_toolbar medium-tall">
-          <iron-icon class="sidebar_polytipe_logo bottom" icon="polytipe-icons:logo"></iron-icon>
-        </paper-toolbar>
+        <div id="drawer_toolbar" class="sidebar_polytipe_toolbar layout horizontal center-center">
+            <iron-image id="avatar" alt="{{user}}" src="{{avatar}}" class="layout horizontal center-center"></iron-image>
+            <div id="toolbar_text">
+              <div id="toolbar_name">{{name}}</div>
+              <div class="paper-font-subhead">{{user}}</div>
+            </div>
+        </div>
+        <paper-menu selected="0">
+          <paper-item>Proyectos</paper-item>
+          <paper-item>Ir a Github</paper-item>
+          <paper-item>Eliminar "polytipe-projects"</paper-item>
+        </paper-menu>
+        <paper-button id="sign_out_button" class="layout horizontal center paper-font-button">
+          <iron-icon class="element_icon" icon="exit-to-app"></iron-icon>
+          <div class="">Cerrar sesión</div>
+        </paper-button>
+
+
       </paper-header-panel>
 
       <paper-header-panel main class="main_frame" mode="seamed">
@@ -76,37 +91,42 @@
               <paper-icon-button icon="menu" paper-drawer-left></paper-icon-button>
               <div class="paper-font-title">Polytipe</div>
               <div class="flex"></div>
-              <div id="user_box" class="layout horizontal">
-                <div class="paper-font-subhead">{{user}}</div>
-                <iron-icon id="avatar" src="{{avatar}}"></iron-icon>
-              </div>
+              <paper-icon-button icon="more-vert"></paper-icon-button>
             </paper-toolbar>
 
             <div class="elements_group">
               <div class="elements_label" class="paper-font-subhead">Proyectos</div>
-              <div class="layout horizontal wrap">
-                <iron-selector id="project_selector" attr-for-selected="project" selected="{{selected_project}}" class="layout horizontal">
-                  <template is="dom-repeat" items="{{user_projects}}">
-                    <paper-material elevation="2" project="{{item.name}}" onclick="goto('project_view')" class="project_box layout vertical">
-                      <div class="flex layout vertical center end-justified">
-                        <iron-icon icon="description"></iron-icon>
-                      </div>
-                      <div class="flex layout vertical center-center">
-                        <div class="project_name paper-font-headline">{{item.name}}</div>
-                      </div>
-                      <paper-ripple recenters></paper-ripple>
-                    </paper-material>
-                  </template>
-                </iron-selector>
-                <div id="new_project_box" class="project_box layout vertical center-center">
-                  <paper-fab id="new_project_fab" onclick="addProjectDialog()" icon="add" title="Crear proyecto nuevo"></paper-fab>
-                  <div id="loading_projects_box" class="layout vertical center">
-                    <paper-spinner active></paper-spinner>
-                    <div id="loading_projects_text">Creando proyecto</div>
+              <iron-selector wide-layout$="{{wide}}" id="project_selector" attr-for-selected="project" selected="{{selected_project}}" class="layout horizontal">
+                <template is="dom-repeat" items="{{user_projects}}">
+                  <paper-material elevation="2" project="{{item.name}}" onclick="goto('project_view')" class="project_box layout vertical flex">
+                    <div class="flex layout vertical center end-justified">
+                      <iron-icon class="project_box_icon" icon="description"></iron-icon>
+                    </div>
+                    <div class="flex layout vertical center-center">
+                      <div class="project_name paper-font-headline">{{item.name}}</div>
+                    </div>
+                    <paper-ripple recenters></paper-ripple>
+                  </paper-material>
+                </template>
+              </iron-selector>
+              <div id="loading_project_box" class="project_box layout vertical center-center">
+                <paper-spinner active></paper-spinner>
+              </div>
+              <paper-material id="empty_state_project" elevation="2" onclick="addProjectDialog()" class="project_box layout vertical flex">
+                <div class="flex layout vertical">
+                  <iron-icon class="empty_state_icon" icon="description"></iron-icon>
+                  <div class="empty_state_description">
+                    <div class="paper-font-title">Crea tu primer proyecto</div>
+                    <div class="paper-font-subhead">Empieza a prototipar con Polytipe ahora</div>
+                  </div>
+                  <div class="layout horizontal end-justified">
+                    <iron-icon class="empty_state_arrow" icon="arrow-forward"></iron-icon>
                   </div>
                 </div>
-              </div>
+                <paper-ripple recenters></paper-ripple>
+              </paper-material>
             </div>
+            <paper-fab class="add_fab" onclick="addProjectDialog()" icon="add" title="Crear proyecto nuevo"></paper-fab>
             <iron-ajax auto url="{{project_url}}" method="POST" body="{{ajax_body}}"></iron-ajax>
           </section>
 
@@ -118,7 +138,7 @@
               <template is="dom-if" if="{{unsaved_changes}}">
                 <div class="layout horizontal center">
                   <paper-button noink class="save_button paper-font-button" onclick="promptSaveProject()" onmouseover="getLastSaved()">Tienes cambios sin guardar</paper-button>
-                  <paper-tooltip class="last_saved_tooltip" offset="0" animation-delay="0">El último commit fue {{last_saved}}</paper-tooltip>
+                  <paper-tooltip class="last_saved_tooltip" offset="0" animation-delay="0">El último commit fue hace {{last_saved}}</paper-tooltip>
                 </div>
               </template>
               <paper-icon-button class="delete_icon" icon="delete" title="Eliminar proyecto" onclick="promptDeleteProject()"></paper-icon-button>
@@ -127,11 +147,11 @@
             <div class="elements_group">
               <div class="elements_label" class="paper-font-subhead">Pantallas</div>
               <div class="layout horizontal wrap">
-                <iron-selector id="screen_selector" attr-for-selected="screen" selected="{{selected_screen}}" class="layout horizontal">
+                <iron-selector wide-layout$="{{wide}}" id="screen_selector" attr-for-selected="screen" selected="{{selected_screen}}" class="layout horizontal">
                   <template is="dom-repeat" items="{{project_screens}}">
                     <paper-material elevation="2" screen="{{item.name}}" onclick="goto('screen_editor')" class="screen_box layout vertical">
                       <div class="flex layout vertical center end-justified">
-                        <iron-icon icon="hardware:smartphone"></iron-icon>
+                        <iron-icon class="screen_box_icon" icon="hardware:smartphone"></iron-icon>
                       </div>
                       <div class="flex layout vertical center-center">
                         <div class="project_name paper-font-headline">{{item.name}}</div>
@@ -141,11 +161,26 @@
                   </template>
                 </iron-selector>
 
-                <div id="screen_placeholder" class="screen_box layout horizontal center-center">
-                  <paper-fab onclick="addScreenDialog()" icon="add" title="Agregar una pantalla"></paper-fab>
+                <div id="screen_placeholder" class="screen_box layout vertical center-center">
+                  <paper-spinner active></paper-spinner>
                 </div>
+
+                <paper-material id="empty_state_screen" elevation="2" screen="{{item.name}}" onclick="addScreenDialog()" class="screen_box layout vertical">
+                  <div class="flex layout vertical">
+                    <iron-icon class="empty_state_screen_icon" icon="hardware:smartphone"></iron-icon>
+                    <div class="empty_state_description">
+                      <div class="paper-font-title">Crea una pantalla</div>
+                      <div class="paper-font-subhead">Cada pantalla es un lienzo para diseñar las interfaces de tu proyecto</div>
+                    </div>
+                    <div class="layout horizontal end-justified">
+                      <iron-icon class="empty_state_arrow" icon="arrow-forward"></iron-icon>
+                    </div>
+                  </div>
+                  <paper-ripple recenters></paper-ripple>
+                </paper-material>
               </div>
             </div>
+            <paper-fab class="add_fab" onclick="addScreenDialog()" icon="add" title="Agregar una pantalla"></paper-fab>
           </section>
 
           <section id="screen_editor">
@@ -225,16 +260,14 @@
                   <template is="dom-if" if="{{unsaved_changes}}">
                     <div class="layout horizontal center">
                       <paper-button noink class="save_button paper-font-button" onclick="promptSaveProject()" onmouseover="getLastSaved()">Tienes cambios sin guardar</paper-button>
-                      <paper-tooltip class="last_saved_tooltip" offset="0" animation-delay="0">El último commit fue {{last_saved}}</paper-tooltip>
+                      <paper-tooltip class="last_saved_tooltip" offset="0" animation-delay="0">El último commit fue hace {{last_saved}}</paper-tooltip>
                     </div>
                   </template>
                   <paper-icon-button class="delete_icon" icon="delete" title="Eliminar pantalla" onclick="promptDeleteScreen()"></paper-icon-button>
                   <paper-icon-button class="right_drawer_toggle" icon="menu" paper-drawer-right></paper-icon-button>
                 </paper-toolbar>
 
-                <div id="app_container" class="layout horizontal center-center">
-                  <iframe id="app_iframe"></iframe>
-                </div>
+                <div id="app_container" class="layout horizontal center-center"></div>
               </paper-header-panel>
             </paper-drawer-panel>
           </section>
@@ -242,10 +275,15 @@
       </paper-header-panel>
     </paper-drawer-panel>
 
+    <iron-media-query query="(min-width: 1400px)" query-matches="{{wide}}"></iron-media-query>
+
     <div class="dialogs">
       <!-- User view dialogs -->
       <paper-dialog id="add_project_dialog" class="modal_dialog" with-backdrop entry-animation="slide-from-bottom-animation" exit-animation="fade-out-animation">
-        <h2>Crear proyecto</h2>
+        <div class="layout horizontal">
+          <h2 class="flex">Crear proyecto</h2>
+          <paper-spinner id="creating_spinner"></paper-spinner>
+        </div>
         <paper-input id="add_project_input" label="Nombre (no se permiten espacios)" value="{{project_name}}" allowed-pattern="[a-zA-Z0-9-_]" autofocus required error-message="Este campo no puede dejarse en blanco"></paper-input>
         <div class="buttons">
           <paper-button class="cancel_button" noink dialog-dismiss>Cancelar</paper-button>
@@ -319,7 +357,6 @@
           <paper-button noink>Ver</paper-button>
         </a>
       </paper-toast>
-      <paper-toast id="ready_toast" duration="2500" text="Bienvenido a Polytipe"></paper-toast>
       <paper-toast id="project_taken_toast" duration="3500" text="Ya existe un proyecto con este nombre"></paper-toast>
       <paper-toast id="screen_taken_toast" duration="3500" text="Ya existe una pantalla con este nombre"></paper-toast>
       <paper-toast id="sign_in_fail_toast" duration="3000" text="Usuario o token incorrectos"></paper-toast>
