Add iron-a11y-keys for saving/deleting
Ctrl+S triggers the save dialog
Backspace triggers deleteElement

--- a/elements.html
+++ b/elements.html
@@ -12,6 +12,7 @@
 <link rel="import" href="bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="bower_components/iron-a11y-keys/iron-a11y-keys.html">
 
 <!-- paper-elements -->
 <link rel="import" href="bower_components/paper-drawer-panel/paper-drawer-panel.html">
