--- a/styles.html
+++ b/styles.html
@@ -280,10 +280,12 @@
   .element_icon{
     margin-right: 20px;
   }
-  #sign_out_button{
-    position: absolute;
-    bottom: 20px;
-    margin-left: 5px;
+  .left_toolbar_icon{
+    color: #bbb;
+  }
+  .link{
+    color: inherit;
+    text-decoration: none;
   }
 
   /* Sign in screen */
