--- a/elements.html
+++ b/elements.html
@@ -6,6 +6,7 @@
 <link rel="import" href="bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="bower_components/iron-icons/editor-icons.html">
 <link rel="import" href="bower_components/iron-icons/hardware-icons.html">
+<link rel="import" href="bower_components/iron-icons/social-icons.html">
 <link rel="import" href="bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="bower_components/iron-image/iron-image.html">
@@ -33,6 +34,7 @@
 <link rel="import" href="bower_components/paper-material/paper-material.html">
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="bower_components/paper-menu-button/paper-menu-button.html">
 
 <!-- neon-elements -->
 <link rel="import" href="bower_components/neon-animation/neon-animations.html">
@@ -85,5 +87,17 @@
       <path d="M19.367,11.037L4.726,4.726l8.185,30.548l22.363-22.363L19.367,11.037z M17.637,17.637l12.913-3.46L14.177,30.55
 		L17.637,17.637z" />
     </g>
+
+    <g id="github">
+      <path fill-rule="evenodd" clip-rule="evenodd" d="M19.999,0.577c-10.996,0-19.913,8.916-19.913,19.916
+		c0,8.798,5.706,16.262,13.62,18.896c0.996,0.183,1.359-0.432,1.359-0.96c0-0.473-0.017-1.725-0.027-3.387
+		c-5.54,1.203-6.708-2.67-6.708-2.67c-0.906-2.301-2.211-2.913-2.211-2.913c-1.808-1.236,0.137-1.211,0.137-1.211
+		c1.998,0.141,3.05,2.052,3.05,2.052c1.776,3.043,4.661,2.164,5.796,1.655c0.181-1.287,0.695-2.164,1.264-2.662
+		c-4.422-0.503-9.071-2.211-9.071-9.842c0-2.174,0.776-3.952,2.05-5.344c-0.205-0.504-0.888-2.529,0.195-5.27
+		c0,0,1.672-0.535,5.476,2.042c1.588-0.442,3.292-0.663,4.986-0.67c1.691,0.008,3.395,0.229,4.986,0.67
+		c3.802-2.577,5.471-2.042,5.471-2.042c1.086,2.742,0.403,4.767,0.198,5.27c1.276,1.392,2.047,3.17,2.047,5.344
+		c0,7.65-4.656,9.334-9.093,9.827c0.715,0.615,1.352,1.83,1.352,3.688c0,2.662-0.024,4.81-0.024,5.463
+		c0,0.533,0.359,1.152,1.369,0.958c7.907-2.639,13.607-10.098,13.607-18.893C39.915,9.493,30.997,0.577,19.999,0.577z"/>
+  </g>
   </svg>
 </iron-iconset-svg>
