Add Firebase login

--- a/elements.html
+++ b/elements.html
@@ -45,6 +45,13 @@
 <link rel="import" href="bower_components/carbon-route/carbon-route.html">
 <link rel="import" href="bower_components/carbon-route/carbon-location.html">
 
+<!-- GoogleWebComponents-elements -->
+<link rel="import" href="bower_components/firebase-element/firebase.html">
+<link rel="import" href="bower_components/firebase-element/firebase-auth.html">
+<link rel="import" href="bower_components/firebase-element/firebase-collection.html">
+<link rel="import" href="bower_components/firebase-element/firebase-document.html">
+<link rel="import" href="bower_components/firebase-element/firebase-query-behavior.html">
+
 <!-- Elements from customelements.io-->
 <link rel="import" href="bower_components/file-tree/file-tree.html">
 <link rel="import" href="bower_components/paper-swatch-picker/paper-swatch-picker.html">
