--- a/styles.html
+++ b/styles.html
@@ -290,45 +290,33 @@
 
   /* Sign in screen */
 
-  #sign_in_left{
-    background-color: var(--polytipe-accent-color);
-    width: 100%;
-    height: 100%;
-  }
-  #sign_in_logo{
-    width: 300px;
-    height: auto;
-    margin-right: 40px;
-    color: rgba(0, 0, 0, 0.3);
-  }
   #sign_in_logo_small{
-    display: none;
+    width: 150px;
+    height: auto;
+    color: white;
   }
   #sign_in_box{
-    width: 250px;
-    background-color: #eee;
-    margin-left: 40px;
-    padding: 40px;
-  }
-  #sign_in_title{
-    margin-bottom: 20px;
-  }
-  #sign_in_box paper-input{
-    --paper-input-container-focus-color: var(--polytipe-accent-color);
-  }
-  #sign_in_bottom{
-    margin-top: 25px;
-  }
-  #sign_in_bottom a{
-    color: #555;
-  }
-  #sign_in_bottom paper-button{
-    font-size: 14px;
-    margin-left: -5px;
-  }
-  #sign_in_bottom paper-fab{
+    width: 200px;
     background-color: var(--polytipe-accent-color);
+    padding: 40px;
+    color: rgba(20, 20, 20, 0.75);
   }
+  #sign_in_box paper-button{
+    font-size: 14px;
+    color: #555;
+    background-color: #eee;
+    margin-top: 30px;
+  }
+  #sign_in_fail_toast paper-button{
+    color: var(--polytipe-accent-color);
+  }
+  #sign_in_image_container{
+    height: 300px;
+  }
+  #sign_in_image{
+    width: 250px;
+    height: 250px;
+  }  
 
   /* User view */
 
@@ -517,27 +505,11 @@
     #app_iframe{
       transform: scale(0.75);
     }
-    #sign_in_left{
-      display: none;
-    }
     #sign_in_box{
       width: 220px;
-      margin-left: 0px;
-    }
-    #sign_in_box_container{
-      -ms-flex-direction: column;
-      -webkit-flex-direction: column;
-      flex-direction: column;
-      -ms-flex-pack: center;
-      -webkit-justify-content: center;
-      justify-content: center;
-      margin-top: 80px;
     }
     #sign_in_logo_small{
       width: 150px;
-      height: auto;
-      color: rgb(255, 255, 255);
-      display: inline;
     }
     /* User view */
     #user_box{
